# ragchain-template

./: .gitignore  05_data_version_manager.ipynb  05_rag_evaluation.ipynb  06_generator_evaluation.ipynb  README.md  extraction.ipynb  pyproject.toml  test.ipynb  todo.txt
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
configs/: model_config.yaml
data/evaluation/: golden_dataset.json  golden_dataset_v1.json
data/raw/: overall.txt  rerun.txt  workshop.txt
data/style_tune/: finetune_dataset.jsonl
docs/: README.md  evaluation.md  gcs_setup.md  nlp_setup.md  prompts.md  quickstart.md  tools_configuration.md  troubleshooting.md
evaluation/: README.md  __init__.py  e2e_evaluation.py  evaluation_config.py  evaluator.py  example_usage.py  generator_evaluation.py  metrics.py  retriever_evaluation.py  utils.py
evaluation/test_data/: golden_dataset_v2.json
examples/: README.md  basic_rag_example.py  data_ingestion_example.py  data_versioning_example.py  guardrail_usage_example.py  nlp_usage_example.py  production_gcs_setup.py  prompt_templates_example.py  simple_chatbot.py  tools_usage_example.py
mlruns/0/: meta.yaml
mlruns/0/traces/5c4cd5982d1645cc9f5ace50a45b2dbc/: trace_info.yaml
mlruns/0/traces/5c4cd5982d1645cc9f5ace50a45b2dbc/request_metadata/: mlflow.source.git.commit  mlflow.source.git.repoURL  mlflow.source.name  mlflow.traceInputs
notebook/: 01_data_extraction.ipynb  02_testing_retrieval.ipynb  03_testing_deepeval.ipynb  04_testing_mlflow.ipynb  07_e2e_evaluation.ipynb  note_rag_evaluation.md
scripts/: build_faiss_index.py  create_data_version.py
src/components/: evaluation.py  ingestion.py  ragchain.py  ragchain_runner.py
src/evaluation/: retriever_evaluation.py
src/guardrails/: README.md  __init__.py  base.py  guardrails_manager.py  manager.py  nlp_utils.py
src/guardrails/validators/: __init__.py  content_safety.py  input_validators.py  output_validators.py  pii_detector.py
src/prompts/: __init__.py  prompt_manager.py
src/prompts/templates/: sales_support_v1.yaml
src/tools/: CACHE_README.md  __init__.py  calculator.py  text_analyzer.py  tool_manager.py
src/tools/utils/: __init__.py  cache_manager.py  rate_limiter.py
src/utils/: __init__.py  app_config.py  config_manager.py  logger.py  nlp_utils.py
src/utils/config/: app_config.py  manager.py
src/utils/pipeline/: data_version_manager.py  mlflow_tracker.py  vectorstore_manager.py
tests/: test_guardrails.py  test_nlp_utils.py  test_retrieval.py  test_tools_config.py
(+2 files in other folders)
