[project]
name = "typhoon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core ML/AI Libraries
    "openai>=1.86.0",
    "numpy>=2.3.1",
    "torch>=2.7.1",
    "sentence-transformers>=5.0.0",
    # LangChain Ecosystem
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.25",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.23",
    # Vector Database
    "faiss-cpu>=1.11.0",
    # Data Processing & Config
    "pyyaml>=6.0.2",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    # NLP Libraries for Guardrails
    "pythainlp>=4.0.0",
    "spacy>=3.7.0",
    # Validation & Utils
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    # Caching
    "cachetools>=5.3.0",
    # Experiment Tracking
    "mlflow>=3.0.0rc0",
    "deepeval>=3.2.1",
    "pip>=25.1.1",
]

[project.optional-dependencies]
# Evaluation dependencies (optional)
evaluation = [
    "deepeval>=0.20.4",
]

# Cloud storage (optional)
gcs = [
    "google-cloud-storage>=2.0.0",
]

# NLP models (optional)
nlp = [
    "spacy[th]>=3.7.0",  # Thai language model for spacy
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
